test/errors/assign_to_constant_member.li
let str = "Hello, World!";

str.length = 13;